Switch snapshot storage to local files
Ditch the use Akka Persistence for snapshots in favor of local files for
saveSnapshot() and recovery purposes.

This is not completely correct, as we still persist an empty state to
Pekko persistence and do not cascade snapshot deletes. This will be
rectified in a subsequent patch.

JIRA: CONTROLLER-2134
Change-Id: I601e6d897407e364e1e2f4cd552495d5c4b9b5cf
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>